[gd_scene load_steps=15 format=3 uid="uid://ckani42b3mc77"]

[ext_resource type="Shader" uid="uid://bfkqgk6v07ofm" path="res://shaders/smoothpixel.gdshader" id="1_8w5pg"]
[ext_resource type="Script" uid="uid://dfgwea7dil0sf" path="res://scripts/card.gd" id="1_kg30u"]
[ext_resource type="FontFile" uid="uid://ctj8dwwl487io" path="res://assets/RetroByte.ttf" id="2_kg30u"]
[ext_resource type="Texture2D" uid="uid://dvhkyub17hlpu" path="res://assets/cards/default_card.png" id="3_8w5pg"]
[ext_resource type="FontFile" uid="uid://ljeu5tf3k34a" path="res://assets/terminal-grotesque.ttf" id="3_sy11y"]
[ext_resource type="Texture2D" uid="uid://chlcaafyoslfm" path="res://assets/soured.png" id="4_1yd6c"]
[ext_resource type="LabelSettings" uid="uid://cj2a64x4bucfw" path="res://assets/shadow.tres" id="4_sy11y"]
[ext_resource type="LabelSettings" uid="uid://cctnrg551xvnl" path="res://assets/outline.tres" id="6_6ligt"]
[ext_resource type="PackedScene" uid="uid://dxp7csr55hwpx" path="res://scenes/cool_button.tscn" id="8_nvopj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8w5pg"]
shader = ExtResource("1_8w5pg")

[sub_resource type="Theme" id="Theme_6ligt"]
default_font = ExtResource("2_kg30u")
default_font_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_sy11y"]
outline_size = 5
outline_color = Color(0.556863, 0.137255, 0.137255, 1)

[sub_resource type="Theme" id="Theme_8w5pg"]
default_font = ExtResource("3_sy11y")
default_font_size = 50

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8w5pg"]
size = Vector2(64, 88)

[node name="Card" type="Node2D"]
texture_filter = 1
script = ExtResource("1_kg30u")

[node name="Sprites" type="Node2D" parent="."]
texture_filter = 2
material = SubResource("ShaderMaterial_8w5pg")

[node name="CardBack" type="Sprite2D" parent="Sprites"]
use_parent_material = true
texture = ExtResource("3_8w5pg")

[node name="CardFace" type="Sprite2D" parent="Sprites"]
use_parent_material = true
position = Vector2(0, -16)
scale = Vector2(0.200002, 0.200002)
texture = ExtResource("4_1yd6c")

[node name="Text" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Title" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = -28.0
offset_top = -41.0
offset_right = 54.0
offset_bottom = -27.0
scale = Vector2(0.439988, 0.439988)
theme = SubResource("Theme_6ligt")
text = "Default Card"
label_settings = ExtResource("4_sy11y")
metadata/_edit_use_anchors_ = true

[node name="MaxHealth" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = 17.0
offset_top = -41.0
offset_right = 58.0
offset_bottom = -27.0
scale = Vector2(0.246391, 0.377641)
theme = SubResource("Theme_6ligt")
text = "100 HP"
label_settings = ExtResource("4_sy11y")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Weakness" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = -23.0
offset_top = 36.0
offset_right = 39.0
offset_bottom = 50.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "Weakness"
label_settings = ExtResource("4_sy11y")
metadata/_edit_use_anchors_ = true

[node name="Milk" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = 7.0
offset_top = 36.0
offset_right = 69.0
offset_bottom = 50.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "10"
label_settings = ExtResource("4_sy11y")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MilkAttack1" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = 7.0
offset_top = 13.0
offset_right = 69.0
offset_bottom = 27.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "11"
label_settings = ExtResource("4_sy11y")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="MilkAttack2" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = 7.0
offset_top = 30.0
offset_right = 69.0
offset_bottom = 44.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "12"
label_settings = ExtResource("4_sy11y")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Attack1" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = -27.0
offset_top = 1.0
offset_right = 35.0
offset_bottom = 15.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "Attack1"
label_settings = ExtResource("4_sy11y")
metadata/_edit_use_anchors_ = true

[node name="Attack2" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = -27.0
offset_top = 17.0
offset_right = 35.0
offset_bottom = 31.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "Attack2"
label_settings = ExtResource("4_sy11y")
metadata/_edit_use_anchors_ = true

[node name="Type" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = 6.0
offset_top = -5.0
offset_right = 68.0
offset_bottom = 9.0
scale = Vector2(0.319993, 0.319993)
theme = SubResource("Theme_6ligt")
text = "Type"
label_settings = SubResource("LabelSettings_sy11y")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="AttackDesc1" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = -27.0
offset_top = 6.0
offset_right = 661.0
offset_bottom = 144.0
scale = Vector2(0.0799993, 0.0799993)
theme = SubResource("Theme_8w5pg")
text = "Super Cool Description One"
label_settings = ExtResource("6_6ligt")
metadata/_edit_use_anchors_ = true

[node name="AttackDesc2" type="Label" parent="Text"]
unique_name_in_owner = true
offset_left = -27.0
offset_top = 22.0
offset_right = 661.0
offset_bottom = 160.0
scale = Vector2(0.0799993, 0.0799993)
theme = SubResource("Theme_8w5pg")
text = "Super Cool Description Two"
label_settings = ExtResource("6_6ligt")
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
z_index = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8w5pg")
debug_color = Color(1, 1, 1, 0.0352941)

[node name="Clicky" parent="." instance=ExtResource("8_nvopj")]
self_modulate = Color(1, 1, 1, 0)
offset_left = -32.0
offset_top = -44.0
offset_right = 96.0
offset_bottom = 132.0
scale = Vector2(0.5, 0.5)
text = ""

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="Clicky" to="." method="_on_clicky_pressed"]
